--- a/newyeargear.html
+++ b/newyeargear.html
@@ -340,7 +340,7 @@ People dignify the glory of your efforts with your journey. Show them the way.
       <h3>2021 - Shield your Health</h3>
       <p>Health is the harmony of intimately interconnected force in terms of body, focus, confidence and spirit.
 	  Meditation, physical activity, yoga, exercises, and healthy diet promote more control over mind and body.
-	  Even a sad soul could come lively when you really try hard to be in that peace of mind, and that's where shielding
+	  Even a sad soul could become lively when you really try hard to be in that peace of mind, and that's where shielding
 	  your good health is always an extra advantage. Push your limits, self-control is the base of shielding your 
 	  health followed by self-belief which anticipates the continuity of discipline to assure good health.
 	  It cultivates immensely cheerful vibes around you, stating an important factor to start, process and 
