--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ position: static;
 		<img src="imgs/stw.gif" width="325px" height="325px"><br>
 	
   <br>
-    <img src="imgs/rewardeey.png" width="325px" height="325px" onclick="alert('Go to - Book Reviews and Articles')" >
+    <img src="imgs/rewardy.gif" width="325px" height="325px" onclick="alert('Go to - Book Reviews and Articles')" >
 </center>
 	<br>
   <a href="chat.html"><img src="imgs/chat.png" width="60px" height="60px" id="fixedbutton" align="right"> </a>
