--- a/newyeargear.html
+++ b/newyeargear.html
@@ -406,7 +406,7 @@ var countdownfunction = setInterval(function() {
   // If the count down is over, write some text 
   if (distance < 0) {
     clearInterval(countdownfunction);
-    document.getElementById("demo").innerHTML = "EXPIRED";
+    document.getElementById("demo").innerHTML = "It's - January, 2021";
   }
 }, 1000);
 </script>
