--- a/quotesthoughts.html
+++ b/quotesthoughts.html
@@ -199,7 +199,7 @@ bad; everything's temporary.. <br>even this passing time!</span></span></p>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<br><div class="containerimg">
-      <img src="imgs/17.jpg" style="width:300px;height:300px;">
+      <img src="imgs/17.png" style="width:300px;height:300px;">
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
