--- a/newyeargear.html
+++ b/newyeargear.html
@@ -244,7 +244,7 @@ img {
 
   <div class="header-left">
  
-    <a class="active" href="index.html">Back</a>
+    <a class="active" href="index.html">Home</a>
 	
   </div>
 </div>
