--- a/bookreviews.html
+++ b/bookreviews.html
@@ -735,7 +735,7 @@ divided into chapters and each one is interconnected by another.
 	
 <b><i>Disclaimer:</b></i><br>
 	Website content is managed by Sarvesh Soni.
-The information and design that is being presented or used are veracious to my knowledge. 
+The information and design that are being presented or used are veracious to my knowledge. 
 Any kind of similarity is purely coincidental. 
 The content is subject to change and should not be constructed as a commitment. 
 	</div>
