--- a/newyeargear.html
+++ b/newyeargear.html
@@ -374,7 +374,7 @@ People dignify the glory of your efforts with your journey. Show them the way.
 
 <b><i>Disclaimer:</b></i><br>
 	Website content is managed by Sarvesh Soni.
-The information and design that is being presented or used are veracious to my knowledge. 
+The information and design that are being presented or used are veracious to my knowledge. 
 Any kind of similarity is purely coincidental. 
 The content is subject to change and should not be constructed as a commitment. 
 	</div>
