--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@ img {vertical-align: middle;}
 }
 
 .notification {
-  background-image:url(imgs/bellgoldy.jpg);
+  background-image:url(imgs/dforce.png);
   color: white;
   text-decoration: none;
   font-size: 18px;
   padding: 12px 12px;
   width: 270px;
-  height: 130px;
+  height: 270px;
   position: relative;
   display: inline-block;
   border-radius: 3px;
@@ -183,7 +183,7 @@ img {vertical-align: middle;}
         opacity: 1;
     }
     50% {
-        opacity: 0.25;
+        opacity: 0.60;
     }
     100% {
         opacity: 1;
