--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ img {vertical-align: middle;}
 }
 
 .notification {
-  background-image:url(imgs/dforce.png);
+  background-image:url(imgs/driveforce.png);
   color: white;
   text-decoration: none;
   font-size: 18px;
