--- a/newyeargear.html
+++ b/newyeargear.html
@@ -416,7 +416,7 @@ var countdownfunction = setInterval(function() {
   // If the count down is over, write some text 
   if (distance < 0) {
     clearInterval(countdownfunction);
-    document.getElementById("demo").innerHTML = "It's - Amazing-April, 2021";
+    document.getElementById("demo").innerHTML = "It's - Memorable-May, 2021";
   }
 }, 1000);
 </script>
