--- a/quotesthoughts.html
+++ b/quotesthoughts.html
@@ -118,9 +118,11 @@
   border: 4px solid #ecb7bf;
 }
 
-.containerimg {
+.containertext {
   position: relative;
+font-weight: bold
 }
+	
 .buttonsty {
   padding: 7px 7px;
   font-size: 18px;
@@ -263,8 +265,9 @@ bad; everything's temporary.. <br>even this passing time!</span></span></p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
-		<br><div class="containerimg">
-      <img src="imgs/15.jpg" style="width:300px;height:300px;">
+		<br><div class="containertext">
+      <p>Life asks you tough questions to enable the contemplating process
+	  for what is coming and most importantly how you accept it.</p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
