--- a/quotesthoughts.html
+++ b/quotesthoughts.html
@@ -265,7 +265,7 @@ bad; everything's temporary.. <br>even this passing time!</span></span></p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
-		<br><div class="containertext">
+		<div class="containertext">
       <p>Life asks you tough questions to enable the contemplating process
 	  for what is coming and most importantly how you accept it.</p>
   </div>
