--- a/quotesthoughts.html
+++ b/quotesthoughts.html
@@ -118,7 +118,7 @@
   border: 4px solid #ecb7bf;
 }
 
-.containertext {
+.containerimg {
   position: relative;
 }
 	
@@ -261,12 +261,6 @@ bad; everything's temporary.. <br>even this passing time!</span></span></p>
 	
 		<br><div class="containerimg">
       <img src="imgs/14.jpg" style="width:300px;height:300px;">
-  </div>
-    <hr style="height:1px;border-width:0;background-color:#ecb7bf">
-	
-		<div class="containertext">
-      <p>Life asks you tough questions to enable the contemplating process
-	  for what is coming and most importantly how you accept it.</p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
