--- a/quotesthoughts.html
+++ b/quotesthoughts.html
@@ -173,7 +173,7 @@ bad; everything's temporary.. <br>even this passing time!</span></span></p>
   <div class="main">
   
   
-<button class="buttonsty" onclick="typeWriter()"><b>Magic Quote of the Week</b> </button>
+<button class="buttonsty" onclick="typeWriter()"><b>Magic Quote</b> </button>
 <img class="a"  onclick="typeWriter()" src="imgs/magqot.png" style="width:26px;height:31px;">
 
 <p id="demoz"></p>  
