--- a/quotesthoughts.html
+++ b/quotesthoughts.html
@@ -118,7 +118,7 @@
   border: 4px solid #ecb7bf;
 }
 
-.containerimg {
+.containertext {
   position: relative;
 }
 	
@@ -177,92 +177,105 @@ bad; everything's temporary.. <br>even this passing time!</span></span></p>
 <img class="a"  onclick="typeWriter()" src="imgs/magqot.png" style="width:26px;height:31px;">
 
 <p id="demoz"></p>  
-  <br><br></b>
+  </b>
 	
-	<div class="containerimg">
-      <img src="imgs/2.jpg" style="width:300px;height:300px;">
+	<div class="containertext">
+      <p>It takes real heart to bring on SMILES,<br>
+	  Out of the stuff that makes you SAD.</p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
-   	<br><div class="containerimg">
-      <img src="imgs/1.jpg" style="width:300px;height:300px;">
+   	<div class="containertext">
+      <p>You're allowed to be sad,<br>
+	  You're allowed to be in tears,<br>
+	  You're allowed to be unlucky... but<br>
+	  YOU'RE NOT ALLOWED TO GIVE UP!</p>
   </div>
 	<hr style="height:1px;border-width:0;background-color:#ecb7bf">
 
-	<br><div class="containerimg">
-      <img src="imgs/19.jpg" style="width:300px;height:300px;">
+	<div class="containertext">
+      <p>The struggles in your life will encourage you,<br>
+	  The pain in your thoughts will teach you,<br>
+	  The ache in your heart will love you,<br>
+	  The tears in your eyes will lead you,<br> 
+	  JUST KEEP GOING, NO MATTER WHAT!</p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
-		<br><div class="containerimg">
-      <img src="imgs/16.jpg" style="width:300px;height:300px;">
+		<div class="containertext">
+      <p>It takes fortitude to overcome despair,<br> 
+	  Sometimes, it takes courage to quit things but<br> 
+	  Nothing can substitute confrontation,<br> 
+	  Nothing can substitute determination.</p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
-	<br><div class="containerimg">
-      <img src="imgs/3.jpg" style="width:300px;height:300px;">
+	<div class="containertext">
+      <p>You don't become average by losing your dignity<br> 
+	  and skills. You become average by staying there.</p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
-	<br><div class="containerimg">
-      <img src="imgs/18.jpg" style="width:300px;height:300px;">
+	<div class="containertext">
+      <p>You're in a storm, down on your knees<br> 
+	  Flowing emotions cold and weak but<br> 
+	  Get up again and stay positive in it<br> 
+	  It's hard but in the end... IT'S ALL WORTH IT!</p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
-	<br><div class="containerimg">
-      <img src="imgs/17.png" style="width:300px;height:300px;">
+	<div class="containertext">
+      <p>The originality of your journey lies in the<br>
+	  target you set and the success story you desire<br>
+	  to process. Remember, nothing can beat originality.</p>
+	 
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
-	<br><div class="containerimg">
-      <img src="imgs/4.jpg" style="width:300px;height:300px;">
+	<div class="containertext">
+      <p>Life has beautiful things but as time flies,<br>
+	  Beautiful things have wounds and scars too.<br>
+	  There's bravery in dealing with it.</p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
-	<br><div class="containerimg">
-      <img src="imgs/5.jpg" style="width:300px;height:300px;">
+	<div class="containertext">
+      <p>You can't always run away from the Storm,<br>
+	  Sooner or later, you've to chase it.</p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
-	<br><div class="containerimg">
-      <img src="imgs/6.jpg" style="width:300px;height:300px;">
+	<div class="containertext">
+      <p>Control your mind to prioritize your dreams,<br> 
+	  Train your mind to keep it that way.<br> 
+	  You're the true ruler of your destiny,<br>
+	  Follower of none.<br>
+	  You're the greatest achiever of the things,<br> 
+	  That must be done.</p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
-	<br><div class="containerimg">
-      <img src="imgs/7.jpg" style="width:300px;height:300px;">
+	<div class="containertext">
+      <p>You're blazing spark, I'm set alight,<br>
+	  It's the beautiful tale, in the darkest night.</p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
-	<br><div class="containerimg">
-      <img src="imgs/8.jpg" style="width:300px;height:300px;">
+	<div class="containertext">
+      <p>Never lose hope over failures, many wonderful<br>
+	  things are waiting for us. Rainbow comes<br>
+	  to all who feel the storm.</p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
-	<br><div class="containerimg">
-      <img src="imgs/9.jpg" style="width:300px;height:300px;">
+	<div class="containertext">
+      <p>Life is too short to count halts,<br>
+	  Clap for your damn self durind hard times,<br>
+	  Always be your biggest fan!</p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
-	<br><div class="containerimg">
-      <img src="imgs/10.jpg" style="width:300px;height:300px;">
-  </div>
-    <hr style="height:1px;border-width:0;background-color:#ecb7bf">
-	
-	<br><div class="containerimg">
-      <img src="imgs/11.jpg" style="width:300px;height:300px;">
-  </div>
-    <hr style="height:1px;border-width:0;background-color:#ecb7bf">
-	
-		<br><div class="containerimg">
-      <img src="imgs/12.jpg" style="width:300px;height:300px;">
-  </div>
-    <hr style="height:1px;border-width:0;background-color:#ecb7bf">
-	
-		<br><div class="containerimg">
-      <img src="imgs/14.jpg" style="width:300px;height:300px;">
-  </div>
-    <hr style="height:1px;border-width:0;background-color:#ecb7bf">
+	<br>
 	
   </div>
 </div>
