--- a/quotesthoughts.html
+++ b/quotesthoughts.html
@@ -173,7 +173,7 @@ bad; everything's temporary.. <br>even this passing time!</span></span></p>
   <div class="main">
   
   
-<button class="buttonsty" onclick="typeWriter()"><b>Magic Quote</b> </button>
+<button class="buttonsty" onclick="typeWriter()"><b>Magic Quote of the Week</b> </button>
 <img class="a"  onclick="typeWriter()" src="imgs/magqot.png" style="width:26px;height:31px;">
 
 <p id="demoz"></p>  
@@ -217,9 +217,9 @@ bad; everything's temporary.. <br>even this passing time!</span></span></p>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
 	
 	<div class="containertext">
-      <p>You're in a storm, down on your knees<br> 
+      <p>You're in a storm, down on your knees,<br> 
 	  Flowing emotions cold and weak but<br> 
-	  Get up again and stay positive in it<br> 
+	  Get up again and stay positive in it.<br> 
 	  It's hard but in the end... IT'S ALL WORTH IT!</p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
