--- a/quotesthoughts.html
+++ b/quotesthoughts.html
@@ -270,7 +270,7 @@ bad; everything's temporary.. <br>even this passing time!</span></span></p>
 	
 	<div class="containertext">
       <p>Life is too short to count halts,<br>
-	  Clap for your damn self durind hard times,<br>
+	  Clap for your damn self during hard times,<br>
 	  Always be your biggest fan!</p>
   </div>
     <hr style="height:1px;border-width:0;background-color:#ecb7bf">
