--- a/chat.html
+++ b/chat.html
@@ -287,7 +287,7 @@ function showResponse() {
     }
 	 else if(c==3)
    {
-      output.innerHTML="Wow! The motivation is as sparkling as you. Consistsency is the key and improvement leads to infinity.";
+      output.innerHTML="Wow! The motivation is as sparkling as you. Achieving consistency making room for improvement are the keys.";
       inputBox.setAttribute("placeholder", "");
       ++num;
       setTimeout(changeQuestion, 7000);
