--- a/profile.html
+++ b/profile.html
@@ -228,7 +228,7 @@ img {
   <div class="main">
 <br>
 <div class="card">
-  <img src="imgs/authorprofile.png" alt="Author" width="100%" height="100%">
+  <img src="imgs/authorprofile.jpeg" alt="Author" width="100%" height="100%">
   <h2>Sarvesh Soni</h2>
   <p class="title">Thriving in fast-paced world with low daring, moderate struggle, and high motivation.</p>
   
