--- a/newyeargear.html
+++ b/newyeargear.html
@@ -416,8 +416,9 @@ var countdownfunction = setInterval(function() {
   // If the count down is over, write some text 
   if (distance < 0) {
     clearInterval(countdownfunction);
-    document.getElementById("demo").innerHTML = "It's - Magnificent March, 2025";
+    document.getElementById("demo").innerHTML = "It's - Dashing December, 2025";
   }
 }, 1000);
 </script>
   </html>
+
